--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
-header{
+head{
 	background-color: orange;
 	padding: 50px;
 }
 h1{
 	font-family: 'Permanent Marker', cursive;
-	font-size: 20px;
+	font-size: 100px;
 	text-align: center;
 }
