--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,27 @@
 header{
 	background-color: orange;
 	padding: 50px;
+	margin: 0;
 }
 h1{
 	font-family: 'Permanent Marker', cursive;
 	font-size: 100px;
 	text-align: center;
 }
+h2{
+	font-family: 'Permanent Marker', cursive;
+    font-size:40px;
+}
+h3{
+	font-family: 'Permanent Marker', cursive;
+     font-size:20px;
+}
+p{
+	font-family: verdana;
+	color: orange;
+}
+h2, h3{
+	color: orange;
+}
+body{
+	background-color: black;}
